feat: add voxel_map_.rehash(voxel_map_.size())

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,5 +64,6 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "eigen": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/home/nvidia/wjd/fastlivo2/src/FAST-LIVO2"
 }
