--- a/src/FAST-LIVO2/config/avia_run.yaml
+++ b/src/FAST-LIVO2/config/avia_run.yaml
@@ -57,7 +57,7 @@ lio:
   layer_init_num: [5, 5, 5, 5, 5]
 
 local_map:  
-  map_sliding_en: false
+  map_sliding_en: true
   half_map_size: 50
   sliding_thresh: 8
 
@@ -77,7 +77,7 @@ evo:
   pose_output_en: false
 
 pcd_save:
-  pcd_save_en: true
+  pcd_save_en: false
   colmap_output_en: false # need to set interval = -1
   filter_size_pcd: 0.15
   interval: -1
